--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Get in touch with me</div>
-                    <form action="mailto:imaaduwaiz@gmail.com">
+                     <form action="https://formsubmit.co/imaaduwaiz@gmail.com" method="POST">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
@@ -285,6 +285,9 @@
                         <div class="button-area">
                             <button type="submit"> Send message </button>
                         </div>
+                        <input type="hidden" name="https://imaduwaiz.github.io/pages/thankyou.html">
+                        <input type="hidden" name="Subject" value="New Email yayyyy!">
+                        <input type="hidden" name="_captcha" value="false">
                     </form>
                 </div>
             </div>
