--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+fi<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>React JS</span>
+                            <span>Figma</span>
                             <span>40%</span>
                         </div>
                         <div class="line php"></div>
