--- a/certificate.html
+++ b/certificate.html
@@ -100,7 +100,7 @@
     </div>
     <div class="gallery">
         <img src="images/blue.jpg" alt="cisco m1" width="600" height="400">
-        <div class="desc">Blue Prisim Foundation Traning</div>
+        <div class="desc">Blue Prism Foundation Traning</div>
     </div>
     <div class="gallery">
         <img src="images/rpa.jpg" alt="cisco m1" width="600" height="400">
