--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         and SEO. I have done my graduation in the field of Computer scienec and engineering.
                        and worked on various projects using python, machine learning, Tenserflow, object detction, 
                        HTML , CSS, and Java Script. </p>
-                    <a href="imaad uae resume.pdf" download>Download My CV</a>
+                    <a href="imaad uwaiz resume.pdf" download>Download My CV</a>
                 </div>
             </div>
         </div>
