--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="column right">
                     <div class="text">I'm Imaad Uwaiz and I'm a <span class="typing-2"></span></div>
                     <p>I'm expertise in the field of E-Commerce and i have a good experience working 
-                        as E-Commerce executive, operations manager, graphic designing, web development 
+                        as E-Commerce executive, SEM, CMS, Digital Marketing, operations manager, graphic designing, web development 
                         and SEO. I have done my graduation in the field of Computer scienec and engineering.
                        and worked on various projects using python, machine learning, Tenserflow, object detction, 
                        HTML , CSS, and Java Script. </p>
@@ -85,6 +85,13 @@
                         <i class=" fas fa-code"></i>
                         <div class="text">Front End Development</div>
                         <p>I can develop a front-end responsive website that helps the user to interact with it. </p>
+                    </div>
+                </div>
+                  <div class="card">
+                    <div class="box">
+                        <i class="fa-solid fa-chart-simple-horizontal"></i>
+                        <div class="text">Digital Marketing</div>
+                        <p>Managing Google Ads, creating ads campaign in various platforms</p>
                     </div>
                 </div>
                 <div class="card">
