--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="box">
                         <i class="fa fa-paint-brush"></i>
                         <div class="text"> Graphic Designing</div>
-                        <p>Designing social media post, banners and promotional post for Add campaign and managing Webstie sliders and banners.
+                        <p>Designing social media post, banners and promotional post for Add campaign .
                         </p>
                     </div>
                 </div>
