--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                   <div class="card">
                     <div class="box">
-                        <i class="fa-solid fa-chart-simple-horizontal"></i>
+                        <i class="fas fa-chart-simple-horizontal"></i>
                         <div class="text">Digital Marketing</div>
                         <p>Managing Google Ads, creating ads campaign in various platforms</p>
                     </div>
