--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Digital Marketing</div>
-                        <p>Managing Google Ads, creating ads campaign in various platforms</p>
+                        <p>Managing Google Ads, creating ads campaign in various platforms like facebook, instagram </p>
                     </div>
                 </div>
                 <div class="card">
@@ -101,6 +101,8 @@
                         <p>Managing the webstie, inventory, and sales of the company and keeping updates on market trends</p>
                     </div>
                 </div>
+                
+                <br>
                 <br>
                 <div class="card">
                     <div class="box">
