--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Operation manager</span>
+                            <span>Digital Marketing</span>
                             <span>70%</span>
                         </div>
                         <div class="line git"></div>
