--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                 <div class="column right">
                     <div class="text">I'm Imaad Uwaiz and I'm a <span class="typing-2"></span></div>
                     <p>I'm expertise in the field of E-Commerce and i have a good experience working 
-                        as E-Commerce executive, SEM, CMS, Digital Marketing, operations manager, graphic designing, web development 
-                        and SEO. I have done my graduation in the field of Computer scienec and engineering.
+                        as E-Commerce executive,Search Engine Optimization (SEO), SEM, CMS, Digital Marketing, 
+                        operations manager, graphic designing, web development 
+                        . I have done my graduation in the field of Computer scienec and engineering.
                        and worked on various projects using python, machine learning, Tenserflow, object detction, 
                        HTML , CSS, and Java Script. </p>
                     <a href="imaad uwaiz resume.pdf" download>Download My CV</a>
