--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Web Development</span>
+                            <span>SEO</span>
                             <span>50%</span>
                         </div>
                         <div class="line js"></div>
