--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    google-site-verification: google96844cd5fec2bb01.html
-</head>
+<meta name="google-site-verification" content="3INO5_jJQ64UVMalERN_DWQe4vlEHXdBuSTpmxvTLLw" />
+    </head>
 
 
 <body>
